--- a/ihrm_parent/ihrm_salarys/src/main/resources/application.yml
+++ b/ihrm_parent/ihrm_salarys/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
   #2.数据库连接池
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ihrm?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/ihr?useUnicode=true&characterEncoding=utf8
     username: root
-    password: 111111
+    password: 123456
     hikari:
       maximum-pool-size: 2
   redis:
