--- a/ihrm_employee/src/main/resources/application.yml
+++ b/ihrm_employee/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
     name: ihrm-employee #指定服务名
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ihrm?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/ihr?useUnicode=true&characterEncoding=utf8
     username: root
-    password: 111111
+    password: 123456
   jpa:
     database: MySQL
     show-sql: true
